# vcpkg-registry-cmake

./: CMakeLists.txt  README.md  copyright
config/: options.in  update-configuration.cmake.in  update-version.cmake.in  vcpkg-configuration.json.in  vcpkg-head.in
